<resources>
    <string name="app_name">Median</string>
    <string name="mediaNotice">Notice</string>
    <string name="album">Album</string>
    <string name="info">Info</string>
    <string name="board">Board</string>
    <string name="lecture">Lecture</string>
    <string name="setting">Setting</string>
    <string name="app_title">MEDIAN</string>
    <string name="write">write_notice</string>
    <string name="search">search</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="write_comment">댓글 입력</string>
    <string-array name="board_spinner">
        <item>학과공지</item>
        <item>수업후기</item>
        <item>교재장터</item>
        <item>질문답변</item>
    </string-array>

    <string-array name="nav_item">
        <item>NOTICE</item>
        <item>BOARD</item>
        <item>LECTURE</item>
        <item>INFO</item>
        <item>SETTINGS</item>
    </string-array>

    <string-array name="day_list">
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
    </string-array>




    <string name="UX_design">UX디자인</string>
    <string name="VR_studio">VR스튜디오</string>
    <string name="three_dimential_creation">3D어셋\n크리에이션</string>
    <string name="OOP">객체지향\n프로그래밍</string>
    <string name="game_planning_theory">게임기획\n개론</string>
    <string name="game_design">게임디자인</string>
    <string name="game_storytelling">게임스토리텔링</string>
    <string name="game_animation">게임애니메이션</string>
    <string name="game_programming1">게임\n프로그래밍1</string>
    <string name="graphic_design">그래픽 디자인</string>
    <string name="new_media_plan">뉴미디어기획</string>
    <string name="data_science_UX">데이터사이언스\nUX</string>
    <string name="data_science">데이터사이언스\n이론과 응용</string>
    <string name="design_basic">디자인 기초</string>
    <string name="digital_media">디지털 미디어</string>
    <string name="digital_broadcast">디지털방송 및\n뉴미디어</string>
    <string name="digital_sound">디지털 사운드\n기초</string>
    <string name="digital_typography">디지털\n타이포그라피</string>
    <string name="mobile_programming1">모바일\n프로그래밍1</string>
    <string name="media_analytics">미디어\n애널리틱스</string>
    <string name="media_fusion_project">미디어 융합\n프로젝트</string>
    <string name="media_theory">미디어 이론</string>
    <string name="media_search">미디어조사\n방법론</string>
    <string name="media_changup1">미디어 창업1</string>
    <string name="media_changup2">미디어 창업2</string>
    <string name="media_analysis">미디어 통계</string>
    <string name="media_project1">미디어\n프로젝트1</string>
    <string name="media_project2">미디어\n프로젝트2</string>
    <string name="IOT">사물인터넷\n구축 및 활용</string>
    <string name="social_media">소셜미디어</string>
    <string name="social_media_analytics">소셜미디어\n애널리틱스</string>
    <string name="social_media_programming">소셜미디어\n프로그래밍</string>
    <string name="social_media_human">소셜미디어휴먼</string>
    <string name="social_app_project">소셜앱프로젝트</string>
    <string name="smart_contents_sound_creation">스마트콘텐츠\n사운드제작</string>
    <string name="algorithm">알고리즘</string>
    <string name="animation_aesthetics">애니메이션 미학</string>
    <string name="animation_theory">애니메이션 이론</string>
    <string name="app_project">앱프로젝트</string>
    <string name="entertainment_engineer">엔터테인먼트\n엔지니어</string>
    <string name="video_sound_product">영상사운드제작</string>
    <string name="video_edit">영상편집론</string>
    <string name="video_compose">영상합성</string>
    <string name="operating_system">운영체제</string>
    <string name="web_programming">웹앱\n프로그래밍</string>
    <string name="interaction_design">인터랙션 디자인</string>
    <string name="info_graphics">인포그래픽스</string>
    <string name="data_structure">자료구조</string>
    <string name="information_design">정보디자인</string>
    <string name="compter_graphics">컴퓨터\n그래픽스</string>
    <string name="computer_animation">컴퓨터\n애니메이션</string>
    <string name="computer_programming">컴퓨터\n프로그래밍</string>
    <string name="computer_practice">컴퓨터\n프로그래밍 설계</string>
    <string name="croky">크로키</string>
    <string name="probability_statistics1">확률과통계1</string>
    <string name="blank">\n\n</string>

    <string name="profileimage">profileImage</string>

    <string name="san_422">산422</string>
    <string name="san_b103">산B103</string>
    <string name="san_415">산415</string>
    <string name="san_419">산419</string>
    <string name="san_420">산420</string>
    <string name="san_421">산421</string>
    <string name="san_623">산623</string>
    <string name="gym_202">체202</string>
    <string name="elec_511">전511</string>
    <string name="sung_133">성133</string>
    <string name="sung_303">성303</string>
    <string name="sung_305">성305</string>
    <string name="dasan_b105">다B105</string>

    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>

    <string name="aTime">9:00~10:15</string>
    <string name="bTime">10:30~11:45</string>
    <string name="cTime">12:00~13:15</string>
    <string name="dTime">13:30~14:45</string>
    <string name="eTime">15:00~16:15</string>
    <string name="fTime">16:30~17:45</string>
    <string name="gTime">18:00~19:15</string>
    <string name="hTime">19:30 ~</string>

    <string name="add_photo">사진추가</string>
    <string name="set_main_photo">대표 이미지로 설정</string>
    <string name="delete_photo">사진 삭제</string>
    <string name="student_notice">학생회 공지</string>
    <string name="media_notice">학과 공지</string>
    <string name="title">제목</string>
    <string name="contents">내용</string>
    <string name="developer">Developer</string>
    <string name="version_info">현재 버전 : 1.3.4</string>
    <string name="notice">공지사항</string>
    <string name="timetable">시간표</string>
    <string name="board_ko">게시판</string>
    <string name="info_ko">학과정보</string>
    <string name="setting_ko">설정</string>
    <string name="setting_normal">일반</string>
    <string name="setting_alarmSetting">알림 설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_support">지원</string>
    <string name="setting_version">버전 정보</string>
    <string name="version">v 1.3.6</string>
    <string name="setting_help_developer">개발자에게 도움 요청하기</string>
    <string name="setting_developer_information">개발자 정보</string>
    <string name="office">학과사무실</string>
    <string name="X">X</string>
    <string name="space"> </string>
    <string name="register">글쓰기</string>
    <string name="cancle">취소</string>
    <string name="nav_item_title_notice">NOTICE</string>
    <string name="nav_item_title_board">BOARD</string>
    <string name="nav_item_title_lecture">LECTURE</string>
    <string name="nav_item_title_info">INFO</string>
    <string name="nav_item_title_setting">SETTING</string>
</resources>
