<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/notice_button"
            android:layout_width="190dp"
            android:layout_height="110dp"
            android:background="#3F8AC9"
            android:drawableEnd="@drawable/light_bulb"
            android:textAllCaps="false"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/mediaNotice"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <Button
            android:layout_marginStart="10dp"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:text="@string/album"
            android:id="@+id/album_button"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:background="#3F8AC9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:id="@+id/info_button"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:background="#262A6B"
            android:textAllCaps="false"
            android:text="@string/info"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <Button
            android:layout_marginStart="10dp"
            android:layout_width="190dp"
            android:layout_height="110dp"
            android:text="@string/board"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:background="#262A6B"
            android:id="@+id/board_button"
            android:gravity="end|center"
            android:textAllCaps="false"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:drawableStart="@drawable/board"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/lecture_button"
            android:layout_width="190dp"
            android:layout_height="110dp"
            android:background="#6CABDD"
            android:text="@string/lecture"
            android:textColor="#ffffff"
            android:textSize="28sp"
            android:gravity="start|center"
            android:textAllCaps="false"
            android:padding="10dp"
            android:drawableEnd="@drawable/schedule" />

        <Button
            android:id="@+id/setting_button"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:background="#6CABDD"
            android:textAllCaps="false"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="28sp"
            />

    </LinearLayout>

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ajou_logo"
        android:layout_gravity="center"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_marginTop="40dp"
        android:id="@+id/test_image_view"/>


</LinearLayout>
